# 3d_medical_segmentation

./: .gitignore  README.md  app.py  cfg.py  project_plan.md  pyproject.toml
configs/: dataset_btcv.yaml  dataset_msd_heart.yaml  dataset_msd_liver.yaml  dataset_msd_spleen.yaml  inference_default.yaml  model_skip_densenet3d.yaml  model_swin_unetr.yaml  model_unet3d.yaml  train_default.yaml
medseg/: __init__.py  cfg.py
medseg/data_utils/: __init__.py  btcv.py  dataset.py  msd.py  patch_utils.py  transforms.py
medseg/demo/: __init__.py  gradio_app.py
medseg/evaluation/: __init__.py  metrics.py
medseg/inference/: __init__.py  predict.py
medseg/models/: __init__.py  attention_unet.py  swin_unetr.py  unet3d.py
medseg/training/: __init__.py  losses.py  train.py
medseg/utils/: __init__.py  config.py  logging_utils.py
models/: skip_densenet_3d.py
notebooks/: 01_data_exploration.ipynb
reports/: REPORT.md
scripts/: download_btcv.py  download_msd.py  preprocess_btcv.py  preprocess_msd.py  sanity_check_dataloader.py  train_btcv.sh  train_msd_task2.sh  train_msd_task9.sh
tests/: conftest.py  test_dataloader_smoke.py  test_models_forward.py
