[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medseg"
version = "0.1.0"
description = "3D Medical Image Segmentation — 3D U-Net, SkipDenseNet3D, Swin UNETR"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "monai",
    "nibabel>=5.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-image>=0.22",
    "pyyaml>=6.0",
    "wandb>=0.17",
    "tensorboard>=2.17",
    "gradio>=4.36",
    "matplotlib>=3.9",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["medseg*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
